Add emscripten support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,14 @@ set(CMAKE_CXX_VISIBILITY_INLINES_HIDDEN YES)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON CACHE INTERNAL "")
 
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
+  message(STATUS "Configuring for Web using Emscripten")
+  set(EMSCRIPTEN TRUE)
+else()
+  message(STATUS "Configuring for Desktop")
+  set(EMSCRIPTEN FALSE)
+endif()
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type: Debug, Release, RelWithDebInfo, MinSizeRel")
   message(STATUS "Build type not specified: defaulting to Debug")
@@ -63,9 +71,13 @@ if(ENABLE_SINGLE_PRECISION)
   target_compile_definitions(SWE-Interface INTERFACE ENABLE_SINGLE_PRECISION)
 endif()
 
-find_package(glfw3 REQUIRED)
+if(NOT EMSCRIPTEN)
+  find_package(glfw3 REQUIRED)
+  target_link_libraries(SWE-Interface INTERFACE glfw)
+endif()
+
 find_package(bgfx REQUIRED)
 find_package(ImGui REQUIRED)
-target_link_libraries(SWE-Interface INTERFACE glfw bgfx bx imgui)
+target_link_libraries(SWE-Interface INTERFACE bgfx bx imgui)
 
 add_subdirectory(Source)
