--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -11,11 +11,24 @@ target_sources(${SWE_PROJECT_NAME} PRIVATE ${SOURCES} ${SHADER_SOURCES})
 target_link_libraries(${SWE_PROJECT_NAME} PUBLIC SWE-Interface)
 
 target_include_directories(${SWE_PROJECT_NAME} PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${SHADER_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${SHADER_DIR}
 )
 
 add_dependencies(${SWE_PROJECT_NAME} compile_shaders)
 
 add_executable(${SWE_PROJECT_NAME}-App Core/EntryPoint.cpp)
 target_link_libraries(${SWE_PROJECT_NAME}-App PRIVATE ${SWE_PROJECT_NAME})
+
+if(EMSCRIPTEN)
+  target_link_options(${SWE_PROJECT_NAME}-App PRIVATE
+    -sMAX_WEBGL_VERSION=2
+    -sGL_ENABLE_GET_PROC_ADDRESS
+    -sTOTAL_MEMORY=32MB
+    -sALLOW_MEMORY_GROWTH=1
+    -sUSE_WEBGL2=1
+    -sUSE_GLFW=3
+    --shell-file=${CMAKE_SOURCE_DIR}/Source/Shell.html
+  )
+  set(CMAKE_EXECUTABLE_SUFFIX ".html")
+endif()
