--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -24,7 +24,7 @@ if(EMSCRIPTEN)
   target_link_options(${SWE_PROJECT_NAME}-App PRIVATE
     -sMAX_WEBGL_VERSION=2
     -sGL_ENABLE_GET_PROC_ADDRESS
-    -sTOTAL_MEMORY=32MB
+    -sTOTAL_MEMORY=32MB # TODO: Check
     -sALLOW_MEMORY_GROWTH=1
     -sUSE_WEBGL2=1
     -sUSE_GLFW=3
