Use OpenGL for Linux instead of Vulkan
Vulkan having a visual glitch I wasn't able to fix :(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
   set(SC_PROFILE metal) # Metal
 else() # Linux
   set(PLATFORM linux)
-  set(SC_PROFILE spirv) # Vulkan
+  set(SC_PROFILE 130) # OpenGL
 endif()
 
 option(ENABLE_NETCDF "Enable loading NetCDF input files." ON)
