--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -29,7 +29,16 @@ if(EMSCRIPTEN)
     -sMAX_WEBGL_VERSION=2
     -sUSE_GLFW=3
     --shell-file=${CMAKE_SOURCE_DIR}/Source/Shell.html
-    --preload-file ../../Assets/Data@/data
+    --preload-file ${CMAKE_BINARY_DIR}/Assets/Data@/Assets/Data
   )
   set(CMAKE_EXECUTABLE_SUFFIX ".html")
+endif()
+
+if(NOT CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+  add_custom_command(
+    TARGET ${SWE_PROJECT_NAME}-App POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/Assets/Data
+    $<TARGET_FILE_DIR:${SWE_PROJECT_NAME}-App>/Assets/Data
+  )
 endif()
