Add icon for desktop app
Probably not the final icon yet

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -5,9 +5,9 @@ list(FILTER SOURCES EXCLUDE REGEX ".*EntryPoint\\.cpp$")
 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
-# Add shaders as sources to trigger recompilation when they change
-set(SHADER_DIR ${CMAKE_SOURCE_DIR}/Assets/Shaders CACHE PATH "Path to shader files")
-file(GLOB_RECURSE SHADER_SOURCES CONFIGURE_DEPENDS "${SHADER_DIR}/*.sc")
+set(ASSETS_DIR ${CMAKE_SOURCE_DIR}/Assets CACHE PATH "Path to Assets directoy")
+
+file(GLOB_RECURSE SHADER_SOURCES CONFIGURE_DEPENDS "${ASSETS}/Shaders/*.sc")
 
 target_sources(${SWE_PROJECT_NAME} PRIVATE ${SOURCES} ${SHADER_SOURCES})
 
@@ -15,7 +15,7 @@ target_link_libraries(${SWE_PROJECT_NAME} PUBLIC SWE-Interface)
 
 target_include_directories(${SWE_PROJECT_NAME} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
-  ${SHADER_DIR}
+  ${ASSETS_DIR}
 )
 
 add_dependencies(${SWE_PROJECT_NAME} compile_shaders)
